# Trypo

./: .gitignore  README.md
DCS/: .~lock.DCS_V1.docx#  DCS_V1.1.docx  DCS_V1.2.docx  DCS_V1.docx
SQL/: BazaDeDate.sql
Trypo_frontend/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
sample_diagram/: Accomodation.h  Admin.h  CRoom.cpp  CRoom.h  CUsers.cpp  CUsers.h  ClassDiagram.cd  Client.h  Double.h  Extras.h  Facilities.h  IRoom.h  IUsers.cpp  IUsers.h  Logger.cpp  Logger.h  MyException.h  Promotions.h  RentalUnit.h  Service.cpp  Service.h  Single.cpp  Single.h  Triple.cpp  Triple.h  Users.h  log.in  main.cpp  sample_diagram.vcxproj  sample_diagram.vcxproj.filters
